@@ -433,6 +433,7 @@ jsp.dspace-admin.wizard-permissions.text5                       = Who is respons
 jsp.dspace-admin.wizard-permissions.text6                       = Who are the collection administrators for this collection?  They will be able to decide who can submit items to the collection, withdraw items, edit item metadata (after submission), and add (map) existing items from other collections to this collection (subject to authorization from that collection).
 jsp.dspace-admin.wizard-permissions.title                       = Collection Authorization
 jsp.dspace-admin.wizard-questions.check1                        = New items should be publicly readable
+jsp.dspace-admin.wizard-questions.check1-disabled				= Only System Admin can change this
 jsp.dspace-admin.wizard-questions.check2                        = Some users will be able to submit to this collection
 jsp.dspace-admin.wizard-questions.check3                        = The submission workflow will include an <em>accept/reject</em> step
 jsp.dspace-admin.wizard-questions.check4                        = The submission workflow will include an <em>accept/reject/edit metadata</em> step
@@ -1086,6 +1087,7 @@ jsp.tools.edit-community.form.label4                            = Copyright text
 jsp.tools.edit-community.form.label5                            = Side bar text (HTML):
 jsp.tools.edit-community.form.label6                            = Logo:
 jsp.tools.edit-community.form.label7                            = Community's Authorizations:
+jsp.tools.edit-community.form.label8							= Community Administrators:
 jsp.tools.edit-community.heading1                               = Create Community
 jsp.tools.edit-community.heading2                               = Edit Community {0}
 jsp.tools.edit-community.title                                  = Edit Community
