@@ -52,7 +52,8 @@
  - [DS-199] SWORD module doesn't accept X-No-Op header (dry run)
  - [DS-223] Submission process show previous button in JSPUI also if the step is the first "visible" step
  - [DS-227] Values with double apos doesn't work in dropdown and list input type
- - [DS-259] Community/collection admin should not to be able to delete their admin group 
+ - [DS-259] Community/collection admin should not to be able to delete their admin group
+ - [DS-261] Community Admin JSPUI: porting of the DS-228 patch
 
 (Tim Donohue)
  - [DS-218] Cannot add/remove email subscriptions from Profile page in XMLUI
